--- a/app/src/main/res/layout/activity_listado_acontecimientos.xml
+++ b/app/src/main/res/layout/activity_listado_acontecimientos.xml
@@ -23,13 +23,14 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbarListadoAcontecimientos"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:elevation="4dp"
+            android:minHeight="?attr/actionBarSize"
+            app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
-        />
 
     </android.support.design.widget.AppBarLayout>
 
