--- a/app/src/main/res/layout/content_about_us.xml
+++ b/app/src/main/res/layout/content_about_us.xml
@@ -13,4 +13,82 @@
     tools:context="com.carrillo.jesus.eventoline.AboutUS"
     tools:showIn="@layout/activity_about_us">
 
+    <TextView
+        android:text="Desarrollador"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textViewNombre" />
+
+    <TextView
+        android:text="Jesús Carrillo Castillo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewNombreHecho"
+        android:layout_alignBaseline="@+id/textViewNombre"
+        android:layout_alignBottom="@+id/textViewNombre"
+        android:layout_toRightOf="@+id/textViewNombre"
+        android:layout_toEndOf="@+id/textViewNombre"
+        android:layout_marginLeft="58dp"
+        android:layout_marginStart="58dp" />
+
+    <TextView
+        android:text="Version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewNombre"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
+        android:id="@+id/textViewVersion" />
+
+    <TextView
+        android:text="0.0.1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewVersionEscrita"
+        android:layout_alignBaseline="@+id/textViewVersion"
+        android:layout_alignBottom="@+id/textViewVersion"
+        android:layout_alignLeft="@+id/textViewNombreHecho"
+        android:layout_alignStart="@+id/textViewNombreHecho" />
+
+    <TextView
+        android:text="Licencias:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewVersion"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="24dp"
+        android:id="@+id/textViewLicencias" />
+
+    <TextView
+        android:text="Apache"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textViewLicencias"
+        android:layout_alignLeft="@+id/textViewVersionEscrita"
+        android:layout_alignStart="@+id/textViewVersionEscrita"
+        android:id="@+id/TextViewLicencias" />
+
+    <TextView
+        android:text="Contacto:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewLicencias"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="31dp"
+        android:id="@+id/textView9" />
+
+    <TextView
+        android:text="666666666"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewTelefono"
+        android:layout_alignBaseline="@+id/textView9"
+        android:layout_alignBottom="@+id/textView9"
+        android:layout_alignLeft="@+id/TextViewLicencias"
+        android:layout_alignStart="@+id/TextViewLicencias" />
 </RelativeLayout>
