--- a/app/src/main/res/layout/row_listado_acontecimiento.xml
+++ b/app/src/main/res/layout/row_listado_acontecimiento.xml
@@ -32,4 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
         </LinearLayout>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:background="#bebebe" />
 </LinearLayout>
