terminada primer trimestre mas listado fallo

--- a/app/src/main/res/menu/menu_listado_acontecimietos.xml
+++ b/app/src/main/res/menu/menu_listado_acontecimietos.xml
@@ -4,4 +4,6 @@
 
     <item android:title="Sobre Nosotros"
         android:id="@+id/aboutUsItem" />
+    <item android:title="eventos"
+        android:id="@+id/eventoslistadoid" />
 </menu>
