--- a/app/src/main/res/layout-land/activity_eventos.xml
+++ b/app/src/main/res/layout-land/activity_eventos.xml
@@ -13,12 +13,15 @@
     >
 
     <fragment
-        android:layout_width="wrap_content"
+        android:layout_width="30dip"
         android:layout_height="wrap_content"
         android:name="com.carrillo.jesus.eventoline.ListadoEventosFragment"
         android:id="@+id/fragmentListadoEvento"
         android:layout_weight="1" />
-
+    <View
+        android:layout_width="1dip"
+        android:layout_height="fill_parent"
+        android:background="#bebebe" />
     <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
