--- a/app/src/main/res/layout/fragment_listado_eventos.xml
+++ b/app/src/main/res/layout/fragment_listado_eventos.xml
@@ -5,9 +5,10 @@
     tools:context="com.carrillo.jesus.eventoline.ListadoEventosFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:id="@android:id/list"/>
 </FrameLayout>
