--- a/app/src/main/res/layout/fragment_mostrar_evento.xml
+++ b/app/src/main/res/layout/fragment_mostrar_evento.xml
@@ -5,10 +5,16 @@
     tools:context="com.carrillo.jesus.eventoline.MostrarEventoFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/TextViewFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/mostrarEventosLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
 </FrameLayout>
