--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -3,18 +3,10 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="com.carrillo.jesus.eventoline.SettingsActivity$GeneralPreferenceFragment"
+        android:fragment="com.carrillo.jesus.eventoline.SettingsActivity$LenguagePreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
-        android:title="@string/pref_header_general" />
+        android:title="@string/EditLanguage" />
 
-    <header
-        android:fragment="com.carrillo.jesus.eventoline.SettingsActivity$NotificationPreferenceFragment"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/pref_header_notifications" />
 
-    <header
-        android:fragment="com.carrillo.jesus.eventoline.SettingsActivity$DataSyncPreferenceFragment"
-        android:icon="@drawable/ic_sync_black_24dp"
-        android:title="@string/pref_header_data_sync" />
 
 </preference-headers>
