--- a/app/src/main/res/layout/content_annadir_acontecimiento.xml
+++ b/app/src/main/res/layout/content_annadir_acontecimiento.xml
@@ -25,7 +25,7 @@
         android:inputType="number" />
 
     <Button
-        android:text="Buscar"
+        android:text="@string/Search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
