--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -5,7 +5,7 @@
     <header
         android:fragment="com.carrillo.jesus.eventoline.SettingsActivity$LenguagePreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
-        android:title="@string/EditLanguage" />
+        android:title="@string/General" />
 
 
 
