10/02/2017 Terminado para evaluar

--- a/app/src/main/res/layout/content_ver_acontecimiento.xml
+++ b/app/src/main/res/layout/content_ver_acontecimiento.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_explore_black_24dp"
         android:id="@+id/BotonMapa"
+        android:theme="@style/MyButton"
         android:text="@string/map"
         />
 </LinearLayout>
