--- a/app/src/main/res/layout/activity_listado_acontecimientos.xml
+++ b/app/src/main/res/layout/activity_listado_acontecimientos.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_menu_search" />
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
