--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,8 +1,31 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context="com.carrillo.jesus.eventoline.MapsActivity"  >
+
+<fragment xmlns:map="http://schemas.android.com/apk/res-auto"
     android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.carrillo.jesus.eventoline.MapsActivity" />
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:scrollbars="vertical"
+    class="com.google.android.gms.maps.SupportMapFragment"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:alpha="0.5"
+
+        android:layout_margin="@dimen/fab_margin"
+        app:fabSize="mini"
+        android:layout_gravity="top|end"
+        app:srcCompat="@drawable/ic_punteroacontecimiento"
+        android:id="@+id/floatingActionButtonMapa"
+        app:backgroundTint="@color/cast_libraries_material_featurehighlight_text_body_color" />
+
+
+</FrameLayout>
