--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -2,24 +2,23 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.carrillo.jesus.eventoline.MapsActivity"  >
-
-<fragment xmlns:map="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/map"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:scrollbars="vertical"
-    class="com.google.android.gms.maps.SupportMapFragment"/>
+    android:layout_height="match_parent"
+    tools:context="com.carrillo.jesus.eventoline.MapsActivity"  >
+
+    <fragment
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:scrollbars="vertical"
+        class="com.google.android.gms.maps.SupportMapFragment" />
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:alpha="0.5"
-
         android:layout_margin="@dimen/fab_margin"
         app:fabSize="mini"
         android:layout_gravity="top|end"
